Bug 503800 - Crash on import when no projects opened
Summary: Crash on import when no projects opened
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: 2.12.0
Platform: Manjaro Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-05 15:22 UTC by Anton Yablokov
Modified: 2025-07-06 18:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Yablokov 2025-05-05 15:22:44 UTC
SUMMARY
LabPlot crashes when importing data after closing all projects.

STEPS TO REPRODUCE
1. Launch LabPlot.
2. In the Project Explorer, right-click the first line (“Project”), then hit Close.
3. In the File menu, navigate to the Import sub-menu, then hit a source from the upper group, e.g., From File…

OBSERVED RESULT
The app crashes.

EXPECTED RESULT
The app shows the Import dialog.

SOFTWARE/OS VERSIONS
System: Manjaro Linux
Locale: English, United States
Number Format: 1,000.01 (Updated on restart)
Architecture: x86_64-little_endian-lp64
Kernel: linux 6.12.21-4-MANJARO

Components:
Qt 6.9.0
KDE Frameworks 6.13.0
Cantor 25.04.0
CFITSIO 4.6.2
Discount 3.0.0d
Eigen3 3.4.0
FFTW3 3.3.10
GSL 2.8
HDF5 HDF5 library version: 1.14.6
KSyntaxHighlighting 6.13.0
KUserfeedback 6.13.0
libcerf 3.0
liborigin 3.0.3
Matio 1.5.28
MCAP 1.4.0
NetCDF 4.9.3
ORCUS 0.20.0
Poppler 25.04.0
Purpose 6.13.0
QADS system
Qt MQTT 6.9.0
Qt SerialPort 6.9.0
Qt Svg 6.9.0
QXlsx 
ReadStat 
Vector BLF system
C++ Compiler: GNU 14.2.1
C++ Compiler Flags: -march=x86-64
-mtune=generic
-O2
-pipe
-fno-plt
-fexceptions        
-Wp,-D_FORTIFY_SOURCE=3
-Wformat
-Werror=format-security        
-fstack-clash-protection
-fcf-protection        
-fno-omit-frame-pointer
-mno-omit-leaf-frame-pointer
-Wp,-D_GLIBCXX_ASSERTIONS
-g
-ffile-prefix-map=/build/labplot/src=/usr/src/debug/labplot
-flto=auto
-fno-operator-names
-fno-exceptions
-Wall
-Wextra
-Wcast-align
-Wchar-subscripts
-Wformat-security
-Wno-long-long
-Wpointer-arith
-Wundef
-Wnon-virtual-dtor
-Woverloaded-virtual
-Werror=return-type
-Werror=init-self
-Werror=undef
-Wvla
-Wdate-time
-Wsuggest-override
-Wlogical-op
-pedantic
-Wzero-as-null-pointer-constant
-Wmissing-include-dirs
-Wall
-Wextra
-Wundef
-Wpointer-arith
-Wunreachable-code
-Wunused
-Wdeprecated-declarations
-fno-omit-frame-pointer
-fstack-protector-strong
-fexceptions
-std=c++17
-O2
-Wcast-align
-Wswitch-enum
-fvisibility=default
-pedantic
-ffunction-sections
-fdata-sections
-pipe
-Wzero-as-null-pointer-constant
-Wno-error=hardened

ADDITIONAL INFORMATION
I'm sorry, I'm not smart enough to figure out how to get debug symbols to my system.

```
qt.core.qobject.connect: QObject::disconnect: Unexpected nullptr parameter
kf.completion: KComboBox::setTrapReturnKey not supported with a non-KLineEdit.
kf.completion: KComboBox::setTrapReturnKey not supported with a non-KLineEdit.
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
qt.core.qobject.connect: QObject::connect(AbstractAspect, AspectTreeModel): invalid nullptr parameter
[stsav012-pendrive:45277:0:45277] Caught signal 11 (Segmentation fault: address not mapped to object at address 0x10)
==== backtrace (tid:  45277) ====
 0 0x000000000004cba2 ucs_event_set_fd_get()  ???:0
 1 0x000000000004cd6d ucs_event_set_fd_get()  ???:0
 2 0x000000000003dcd0 __sigaction()  ???:0
 3 0x00000000001f6545 std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_replace_cold()  ???:0
 4 0x00000000001b6cc9 QtPrivate::QPropertyBindingData::notifyObservers()  ???:0
 5 0x000000000057cb54 QAction::activate()  ???:0
 6 0x00000000002e44d9 QMenu::setIcon()  ???:0
 7 0x00000000002e9533 QMenu::clear()  ???:0
 8 0x0000000000151b76 QWidget::event()  ???:0
 9 0x00000000000fed9e QApplicationPrivate::notify_helper()  ???:0
10 0x0000000000102ec6 QApplication::notify()  ???:0
11 0x000000000015a018 QCoreApplication::notifyInternal2()  ???:0
12 0x00000000000f683c QApplicationPrivate::sendMouseEvent()  ???:0
13 0x000000000016cbc7 QWindowContainer::eventFilter()  ???:0
14 0x000000000016db90 QWindowContainer::eventFilter()  ???:0
15 0x00000000000fed9e QApplicationPrivate::notify_helper()  ???:0
16 0x000000000015a018 QCoreApplication::notifyInternal2()  ???:0
17 0x00000000001f6806 QWindowPrivate::forwardToPopup()  ???:0
18 0x000000000018c867 QGuiApplicationPrivate::processMouseEvent()  ???:0
19 0x000000000020d0c4 QWindowSystemInterface::sendWindowSystemEvents()  ???:0
20 0x0000000000053d67 QXcbConnection::xi2HandleEvent()  ???:0
21 0x000000000005e1e4 g_source_query_unix_fd()  ???:0
22 0x00000000000c1e97 g_io_channel_new_file()  ???:0
23 0x000000000005d615 g_main_context_iteration()  ???:0
24 0x00000000003cd59d QEventDispatcherGlib::processEvents()  ???:0
25 0x0000000000165376 QEventLoop::exec()  ???:0
26 0x000000000015d159 QCoreApplication::exec()  ???:0
27 0x00000000001ad318 std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_replace_cold()  ???:0
28 0x0000000000027488 __libc_init_first()  ???:0
29 0x000000000002754c __libc_start_main()  ???:0
30 0x00000000001c5ae5 std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_replace_cold()  ???:0
=================================
```
Comment 1 Alexander Semke 2025-05-08 20:35:59 UTC
Git commit de3c82d1b598ded2bf12bdcc6106ce639a6f69c5 by Alexander Semke.
Committed on 08/05/2025 at 20:34.
Pushed by asemke into branch 'master'.

Removed the action "close project" in the context menu of the project explorer.

There is no state "no project" anymore - we always have either an initial and default project and we load a project.
The action "close project" in the main menu was removed because of this and the similar action in the project explorer was forgotten.
This also fixes the problem with non-initialized project leading to crashes when the project is close and no new one was created/loaded yet
and we try to access it from other actions visible in the GUI like the data import.
FIXED-IN: 3.0

M  +1    -0    ChangeLog
M  +2    -9    src/backend/core/Project.cpp
M  +0    -2    src/frontend/MainWin.cpp
M  +0    -1    src/frontend/MainWin.h

https://invent.kde.org/education/labplot/-/commit/de3c82d1b598ded2bf12bdcc6106ce639a6f69c5
Comment 2 Alexander Semke 2025-07-06 18:43:13 UTC
Git commit a522f3c429bbc8a4c760df143aaf567296e43dee by Alexander Semke.
Committed on 06/07/2025 at 18:36.
Pushed by asemke into branch 'release/2.12'.

Removed the action "close project" in the context menu of the project explorer.

There is no state "no project" anymore - we always have either an initial and default project and we load a project.
The action "close project" in the main menu was removed because of this and the similar action in the project explorer was forgotten.
This also fixes the problem with non-initialized project leading to crashes when the project is close and no new one was created/loaded yet
and we try to access it from other actions visible in the GUI like the data import.
FIXED-IN: 2.12.1

M  +2    -9    src/backend/core/Project.cpp
M  +0    -2    src/frontend/MainWin.cpp
M  +0    -1    src/frontend/MainWin.h

https://invent.kde.org/education/labplot/-/commit/a522f3c429bbc8a4c760df143aaf567296e43dee